--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<a class="button button-primary" href="#">Bergabung</a>
 								<div class="lights-toggle">
 									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
-									<label for="lights-toggle" class="text-xs"><span>Turn me <span class="label-text">dark</span></span></label>
+									<label for="lights-toggle" class="text-xs"><span><span class="label-text"></span></span></label>
 								</div>
 							</div>
 						</div>
@@ -187,7 +187,7 @@
                     <div class="cta-inner section-inner">
                         <div class="cta-header text-center">
                             <h2 class="section-title mt-0">Ingin Cari Pasangan Hidup?</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <p class="section-paragraph">Pastikan anda telah membaca tata tertib terlebih dahulu lalu tekan tombol dibawah ini untuk mulai bergabung dan mengakses fitur Cari Pasangan Idaman</p>
 							<div class="cta-cta">
 								<a class="button button-primary" href="#">Bergabung sekarang</a>
 							</div>
