--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Love in the eyes of Allah</h1>
-	                        <p class="hero-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.                            </p>
+	                        <p class="hero-paragraph">Di Mawaddatun, kami percaya bahwa cinta sejati adalah berkah dari Allah. Platform kami dirancang untuk membantu Muslim Syiah menemukan belahan jiwa mereka dan membangun hubungan yang memuaskan yang dipandu oleh iman dan taqwa.                            </p>
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Bergabung</a>
 								<div class="lights-toggle">
@@ -185,7 +185,7 @@
                 <div class="container-sm">
                     <div class="cta-inner section-inner">
                         <div class="cta-header text-center">
-                            <h2 class="section-title mt-0">Ingin Cari Pasangan Hidup?</h2>
+                            <h2 class="section-title mt-0">Ingin Cari Pasangan Idaman?</h2>
                             <p class="section-paragraph">Pastikan anda telah membaca tata tertib terlebih dahulu lalu tekan tombol dibawah ini untuk mulai bergabung dan mengakses fitur Cari Pasangan Idaman</p>
 							<div class="cta-cta">
 								<a class="button button-primary" href="#">Bergabung sekarang</a>
