--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Bergabung</a>
 								<div class="lights-toggle">
-									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
+									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked"></input>
 								</div>
 							</div>
 						</div>
