--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Love in the eyes of Allah</h1>
-	                        <p class="hero-paragraph">Di Mawaddatun, kami percaya bahwa cinta sejati adalah berkah dari Allah. Platform kami dirancang untuk membantu Muslim Syiah menemukan belahan jiwa mereka dan membangun hubungan yang memuaskan yang dipandu oleh iman dan taqwa.                            </p>
+	                        <p class="hero-paragraph">Di Mawaddatun, kami percaya bahwa cinta sejati adalah berkah dari Allah. Platform kami dirancang untuk membantu Muslim menemukan belahan jiwa mereka dan membangun hubungan yang memuaskan yang dipandu oleh iman dan taqwa.                            </p>
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Bergabung</a>
 								<div class="lights-toggle">
