--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<img class="asset-dark" src="dist/images/img8.svg" width="75" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Memiliki Kemungkinan Ditolak</h3>
+                                    	<h3 class="feature-title mt-0">Otoritas Mawaddatuna</h3>
                                     	<p class="text-sm mb-0">Mawaddatunna memiliki hak penuh untuk menerima, menolak atau mengeluarkan member/calon memberdari keanggotaan website mawaddatuna</p>
 									</div>
 								</div>
