--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Dilarang Kontak Tanpa Pengawasan</h3>
-                                    	<p class="text-sm mb-0">Selama hubungan komunikasi pasangan member masih terikat dengan mawaddatuna, maka dilarang melakukan kontak pribadi langsung dengan calon pasangan idaman tanpa sepengetahuan mawaddatuna</p>
+                                    	<p class="text-sm mb-0">Selama komunikasi calon pasangan masih terikat dengan mawaddatuna, maka dilarang melakukan kontak pribadi secara langsung dengan calon pasangan idaman tanpa sepengetahuan mawaddatuna. \nKomunikasi hanya bisa dilakukan melalui chat aplikasi mawaddatuna</p>
 									</div>
 								</div>
                             </div>
