--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										<img class="asset-dark" src="dist/images/img5.svg" width="75" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Dilarang Kontak Tanpa Pengawasan</h3>
+                                    	<h3 class="feature-title mt-0">Kode Etik Komunikasi</h3>
                                     	<p class="text-sm mb-0">Selama komunikasi calon pasangan masih terikat dengan mawaddatuna, maka dilarang melakukan kontak pribadi secara langsung dengan calon pasangan idaman tanpa sepengetahuan mawaddatuna. \nKomunikasi hanya bisa dilakukan melalui chat aplikasi mawaddatuna</p>
 									</div>
 								</div>
