--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Tidak Untuk Poligami</h3>
-                                    	<p class="text-sm mb-0">Website ini tertutup untuk member yang ingin melakukan Pernikahan Poligami dan berlaku untuk mereka yang berstatus Duda dan Janda</p>
+                                    	<p class="text-sm mb-0">Website ini tidak diperuntukkan bagi mereka yang ingin melakukan pernikahan poligami dan diperbolehkan bagi mereka yang berstatus duda atau janda</p>
 									</div>
 								</div>
                             </div>
@@ -136,7 +136,7 @@
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Kode Etik Komunikasi</h3>
-                                    	<p class="text-sm mb-0">Selama komunikasi calon pasangan masih terikat dengan mawaddatuna, maka dilarang melakukan kontak pribadi secara langsung dengan calon pasangan idaman tanpa sepengetahuan mawaddatuna. \nKomunikasi hanya bisa dilakukan melalui chat aplikasi mawaddatuna</p>
+                                    	<p class="text-sm mb-0">Selama komunikasi calon pasangan masih terikat dengan mawaddatuna, maka dilarang melakukan kontak pribadi secara langsung dengan calon pasangan idaman tanpa sepengetahuan mawaddatuna. Komunikasi hanya bisa dilakukan melalui chat aplikasi mawaddatuna</p>
 									</div>
 								</div>
                             </div>
