--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 										<img class="asset-dark" src="dist/images/img4.svg" width="75" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Mengisi Data Dengan Jujur</h3>
+                                    	<h3 class="feature-title mt-0">Mengisi Data</h3>
                                     	<p class="text-sm mb-0">Member harus memberikan data pribadi apa adanya, sesuai identitas member yang sesungguhnya</p>
 									</div>
 								</div>
