--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">Love in the eyes of Allah</h1>
-	                        <p class="hero-paragraph">Di Mawaddatun, kami percaya bahwa cinta sejati adalah berkah dari Allah. Platform kami dirancang untuk membantu Muslim menemukan belahan jiwa mereka dan membangun hubungan yang memuaskan yang dipandu oleh iman dan taqwa.                            </p>
+	                        <p class="hero-paragraph">Di Mawaddatuna, kami percaya bahwa cinta sejati adalah berkah dari Allah. Platform kami dirancang untuk membantu Muslim menemukan belahan jiwa mereka dan membangun hubungan yang memuaskan yang dipandu oleh iman dan taqwa.                            </p>
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Bergabung</a>
 								<div class="lights-toggle">
@@ -65,7 +65,7 @@
 						<div class="features-header text-center">
 							<div class="container-sm">
 								<h2 class="section-title mt-0">Mawaddatuna</h2>
-	                            <p class="section-paragraph">Platform aman dan terjamin bagi pecinta Ahlulbayt untuk terhubung dan membangun hubungan yang bermakna berdasarkan iman dan kecocokan.</p>
+	                            <p class="section-paragraph">Platform aman dan terjamin bagi pecinta Ahlulbayt untuk terhubung dan mempersiapkan sebuah pernikahan yang sehat / ideal</p>
 								<div class="features-image">
 									<img class="features-illustration asset-dark" src="dist/images/features-illustration-dark.svg" alt="Feature illustration">
 									<!-- <img class="features-box asset-dark" src="dist/images/features-box-dark.svg" alt="Feature box"> -->
