--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Love in the eyes of Allah</h1>
-	                        <p class="hero-paragraph">Di Mawaddatuna, kami percaya bahwa cinta sejati adalah berkah dari Allah. Platform kami dirancang untuk membantu Muslim menemukan belahan jiwa mereka dan membangun hubungan yang memuaskan yang dipandu oleh iman dan taqwa.                            </p>
+	                        <h1 class="hero-title mt-0">Mawaddatuna</h1>
+	                        <p class="hero-paragraph">Platform aman dan terjamin bagi pecinta Ahlulbayt untuk terhubung dan mempersiapkan sebuah pernikahan yang sehat / ideal.</p>
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Bergabung</a>
 								<div class="lights-toggle">
@@ -64,8 +64,8 @@
 					<div class="features-inner section-inner has-bottom-divider">
 						<div class="features-header text-center">
 							<div class="container-sm">
-								<h2 class="section-title mt-0">Mawaddatuna</h2>
-	                            <p class="section-paragraph">Platform aman dan terjamin bagi pecinta Ahlulbayt untuk terhubung dan mempersiapkan sebuah pernikahan yang sehat / ideal</p>
+<!-- 								<h2 class="section-title mt-0">Mawaddatuna</h2> -->
+<!-- 	                            <p class="section-paragraph">Platform aman dan terjamin bagi pecinta Ahlulbayt untuk terhubung dan mempersiapkan sebuah pernikahan yang sehat / ideal</p> -->
 								<div class="features-image">
 									<img class="features-illustration asset-dark" src="dist/images/features-illustration-dark.svg" alt="Feature illustration">
 									<!-- <img class="features-box asset-dark" src="dist/images/features-box-dark.svg" alt="Feature box"> -->
