--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Mawaddatuna</h1>
+	                        <h1 class="hero-title mt-0">Tentang Mawaddatuna</h1>
 	                        <p class="hero-paragraph">Platform aman dan terjamin bagi pecinta Ahlulbayt untuk terhubung dan mempersiapkan sebuah pernikahan yang sehat / ideal.</p>
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Bergabung</a>
