--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</div>
 							<div class="hero-media-container">
 								<!-- <img class="hero-media-image asset-light" src="dist/images/hero-media-light.svg" alt="Hero media"> -->
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/cqEEZnHcWxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe class="hero-media-image asset-light" width="560" height="315" src="https://www.youtube.com/embed/cqEEZnHcWxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 <iframe class="hero-media-image asset-dark" width="560" height="315" src="https://www.youtube.com/embed/cqEEZnHcWxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 								<!-- <img class="hero-media-image asset-dark" src="dist/images/hero-media-dark.svg" alt="Hero media"> -->
 							</div>
